JHRC-77: fix nav items wrapping to a second line on smallest desktop breakpoint

--- a/FrontEndSrc/layout/header/_header.scss
+++ b/FrontEndSrc/layout/header/_header.scss
@@ -78,7 +78,6 @@
 .header__logo {
     font-size: rem-calc(24);
     font-weight: 700;
-    margin-right: 1rem;
     max-width: rem-calc(125);
     text-transform: uppercase;
     transition: .5s ease;
